--- a/src/index.sass
+++ b/src/index.sass
@@ -1,26 +1,46 @@
-$slate-7: #e4e7ef
-$ocean-6: #fafbff
+$slate-1: #1F2129
+$slate-4: #5F667E
+$slate-6: #CFD3E0
+$slate-7: #E4E7EF
+
+$ocean-6: #FAFBFF
+
+$scale-0: 12px
+$scale-1: 13px
+$scale-2: 14px
+$scale-3: 16px
+$scale-4: 18px
+$scale-5: 20px
+$scale-6: 24px
+$scale-7: 28px
 
 body
   font-family: 'Lucida Grande'
 
-table
+.contact-table
   border-collapse: collapse
   width: 100%
 
   tr:nth-child(even)
     background: $ocean-6
 
-table, tr
-  border: 1px solid $slate-7
+  tr
+    border: 1px solid $slate-7
+    height: 28px
 
-th
-  padding: 8px 12px
-  text-align: left
-  text-transform: capitalize
+  th
+    color: $slate-4
+    font-size: $scale-0
+    font-weight: normal
+    padding: 0 12px
+    text-align: left
+    text-transform: capitalize
 
-td
-  padding: 12px
+  td
+    color: $slate-1
+    font-size: $scale-1
+    padding: 12px
 
-input
-  margin: 0 12px 0 0
+  input
+    margin: 0 12px 0 0
+    vertical-align: bottom
