--- a/src/index.sass
+++ b/src/index.sass
@@ -3,7 +3,10 @@ $slate-4: #5F667E
 $slate-6: #CFD3E0
 $slate-7: #E4E7EF
 
+$ocean-2: #396FE3
 $ocean-6: #FAFBFF
+
+$lavender-5: #EAE0FE
 
 $scale-0: 12px
 $scale-1: 13px
@@ -17,9 +20,29 @@ $scale-7: 28px
 body
   font-family: 'Lucida Grande'
 
-.contact-table
+.avatar
+  background-color: $lavender-5
+  border-radius: 100%
+  font-size: 11px
+  height: 20px
+  text-align: center
+  width: 20px
+
+  span
+    vertical-align: middle
+
+.contacts-table
   border-collapse: collapse
   width: 100%
+
+  &__contact
+    display: flex
+
+    div
+      margin-right: 10px
+
+    > span
+      color: $ocean-2
 
   tr:nth-child(even)
     background: $ocean-6
