--- a/src/index.sass
+++ b/src/index.sass
@@ -75,20 +75,55 @@ body
 
 .row-controls
   display: flex
+  flex-direction: column
   position: relative
 
   &__label
     background-color: white
     border: 1px solid $slate-6
     border-radius: 4px
+    cursor: pointer
+    display: flex
+    height: 32px
+    padding: 0
+    width: 67px
 
-    span
+    div
       border-right: 1px solid $slate-6
       display: inline-block
+      height: 100%
+      width: 47px
+
+    span
+      align-items: center
+      display: inline-flex
       font-size: $scale-0
-      font-weight: 700
-      padding: 8px
+      font-weight: bold
+      height: 100%
 
     svg
-      padding: 8px 5px
+      height: 100%
+      margin: auto
       vertical-align: middle
+
+  &__dropdown
+    position: relative
+
+    > div
+      background-color: white
+      border: 1px solid $slate-6
+      border-radius: 3px
+      box-shadow: 0 3px 5px $slate-6
+      display: flex
+      flex-direction: column
+      margin-top: 12px
+      position: absolute
+      z-index: 1
+
+      button
+        background-color: transparent
+        border: none
+        font-size: $scale-0
+        font-weight: bold
+        margin: 12px
+        text-align: left
