--- a/src/index.sass
+++ b/src/index.sass
@@ -20,6 +20,10 @@ $scale-7: 28px
 body
   font-family: 'Lucida Grande'
 
+button
+  &:hover
+    cursor: pointer
+
 .avatar
   background-color: $lavender-5
   border-radius: 100%
@@ -64,7 +68,7 @@ body
   td
     color: $slate-1
     font-size: $scale-1
-    padding: 12px
+    padding: 0 12px
 
   tbody tr
     height: 46px
@@ -72,3 +76,60 @@ body
   input
     margin: 0 12px 0 0
     vertical-align: bottom
+
+.row-controls
+  flex-direction: column
+  position: relative
+
+  &__label
+    background-color: white
+    border: 1px solid $slate-6
+    border-radius: 4px
+    display: flex
+    height: 32px
+    padding: 0
+    width: 67px
+
+    div
+      border-right: 1px solid $slate-6
+      display: inline-block
+      height: 100%
+      width: 47px
+
+    span
+      align-items: center
+      color: $slate-1
+      display: inline-flex
+      font-size: $scale-0
+      font-weight: bold
+      height: 100%
+
+    svg
+      color: $slate-1
+      height: 100%
+      margin: auto
+      vertical-align: middle
+
+  &__dropdown
+    position: relative
+
+    > div
+      background-color: white
+      border: 1px solid $slate-6
+      border-radius: 3px
+      box-shadow: 0 3px 5px $slate-6
+      display: flex
+      flex-direction: column
+      margin-top: 12px
+      position: absolute
+      width: 67px
+      z-index: 1
+
+      button
+        background-color: transparent
+        border: none
+        color: $slate-1
+        font-size: $scale-0
+        font-weight: bold
+        padding: 12px
+        text-align: left
