--- a/src/index.sass
+++ b/src/index.sass
@@ -78,6 +78,12 @@ button
     font-size: $scale-1
     padding: 0 12px
 
+  td:nth-child(4), th:nth-child(4)
+    text-align: center
+
+  td:nth-child(6), th:nth-child(6)
+    text-align: right
+
   tbody tr
     height: 46px
 
@@ -86,6 +92,7 @@ button
     vertical-align: bottom
 
 .row-controls
+  display: inline-flex
   flex-direction: column
   position: relative
 
