--- a/src/index.sass
+++ b/src/index.sass
@@ -73,6 +73,9 @@ button
     text-align: left
     text-transform: capitalize
 
+    svg
+      font-size: $scale-2
+
   td
     color: $slate-1
     font-size: $scale-1
