--- a/src/index.sass
+++ b/src/index.sass
@@ -1,4 +1,5 @@
 $slate-1: #1F2129
+$slate-3: #4E5468
 $slate-4: #5F667E
 $slate-6: #CFD3E0
 $slate-7: #E4E7EF
@@ -16,6 +17,13 @@ $scale-4: 18px
 $scale-5: 20px
 $scale-6: 24px
 $scale-7: 28px
+
+input[type=checkbox]:focus
+  outline-color: $slate-3
+  outline-offset: 0
+
+input[type=checkbox]:hover
+  cursor: pointer
 
 body
   font-family: 'Lucida Grande'
@@ -65,10 +73,19 @@ button
     text-align: left
     text-transform: capitalize
 
+    svg
+      font-size: $scale-2
+
   td
     color: $slate-1
     font-size: $scale-1
     padding: 0 12px
+
+  td:nth-child(4), th:nth-child(4)
+    text-align: center
+
+  td:nth-child(6), th:nth-child(6)
+    text-align: right
 
   tbody tr
     height: 46px
@@ -78,6 +95,7 @@ button
     vertical-align: bottom
 
 .row-controls
+  display: inline-flex
   flex-direction: column
   position: relative
 
