Create Error Banner

--- a/src/index.sass
+++ b/src/index.sass
@@ -1,22 +1,5 @@
-$slate-1: #1F2129
-$slate-3: #4E5468
-$slate-4: #5F667E
-$slate-6: #CFD3E0
-$slate-7: #E4E7EF
-
-$ocean-2: #396FE3
-$ocean-6: #FAFBFF
-
-$lavender-5: #EAE0FE
-
-$scale-0: 12px
-$scale-1: 13px
-$scale-2: 14px
-$scale-3: 16px
-$scale-4: 18px
-$scale-5: 20px
-$scale-6: 24px
-$scale-7: 28px
+@import "./styles/base"
+@import "./styles/ErrorBanner"
 
 input[type=checkbox]:focus
   outline-color: $slate-3
