Toggle error banner

--- a/src/index.sass
+++ b/src/index.sass
@@ -10,6 +10,7 @@ input[type=checkbox]:hover
 
 body
   font-family: 'Lucida Grande'
+  position: relative
 
 button
   &:hover
@@ -28,6 +29,8 @@ button
 
 .contacts-table
   border-collapse: collapse
+  display: inline-table
+  margin: 3rem 0
   min-width: 50rem
   width: 100%
 
