--- a/src/index.sass
+++ b/src/index.sass
@@ -1,5 +1,7 @@
 @import "./styles/base"
 @import "./styles/ErrorBanner"
+@import "./styles/RowControls"
+@import "./styles/Table"
 
 input[type=checkbox]:focus
   outline-color: $slate-3
@@ -26,114 +28,3 @@ button
 
   span
     vertical-align: middle
-
-.contacts-table
-  border-collapse: collapse
-  display: inline-table
-  margin: 3rem 0
-  min-width: 50rem
-  width: 100%
-
-  &__contact
-    display: flex
-    align-items: center
-
-    div
-      margin-right: 10px
-
-    > span
-      color: $ocean-2
-
-  tr:nth-child(even)
-    background: $ocean-6
-
-  tr
-    border: 1px solid $slate-7
-
-  th
-    color: $slate-4
-    font-size: $scale-0
-    font-weight: normal
-    height: 28px
-    padding: 0 12px
-    text-align: left
-    text-transform: capitalize
-
-    svg
-      font-size: $scale-2
-
-  td
-    color: $slate-1
-    font-size: $scale-1
-    padding: 0 12px
-
-  td:nth-child(4), th:nth-child(4)
-    text-align: center
-
-  td:nth-child(6), th:nth-child(6)
-    text-align: right
-
-  tbody tr
-    height: 46px
-
-  input
-    margin: 0 12px 0 0
-    vertical-align: bottom
-
-.row-controls
-  display: inline-flex
-  flex-direction: column
-  position: relative
-
-  &__label
-    background-color: white
-    border: 1px solid $slate-6
-    border-radius: 4px
-    display: flex
-    height: 32px
-    padding: 0
-    width: 67px
-
-    div
-      border-right: 1px solid $slate-6
-      display: inline-block
-      height: 100%
-      width: 47px
-
-    span
-      align-items: center
-      color: $slate-1
-      display: inline-flex
-      font-size: $scale-0
-      font-weight: bold
-      height: 100%
-
-    svg
-      color: $slate-1
-      height: 100%
-      margin: auto
-      vertical-align: middle
-
-  &__dropdown
-    position: relative
-
-    > div
-      background-color: white
-      border: 1px solid $slate-6
-      border-radius: 3px
-      box-shadow: 0 3px 5px $slate-6
-      display: flex
-      flex-direction: column
-      margin-top: 12px
-      position: absolute
-      width: 67px
-      z-index: 1
-
-      button
-        background-color: transparent
-        border: none
-        color: $slate-1
-        font-size: $scale-0
-        font-weight: bold
-        padding: 12px
-        text-align: left
