--- a/src/styles/ErrorBanner.sass
+++ b/src/styles/ErrorBanner.sass
@@ -11,6 +11,10 @@
   position: absolute
   width: 100%
 
+  span
+    font-size: $scale-1
+    margin: 12px
+
   div:last-child
     margin-left: auto
 
