Move base sass styling further up the tree

--- a/src/index.sass
+++ b/src/index.sass
@@ -1,7 +1,7 @@
-@import "./styles/base"
-@import "./styles/ErrorBanner"
-@import "./styles/RowControls"
-@import "./styles/Table"
+@import "./styles/base/main"
+@import "./styles/components/ErrorBanner"
+@import "./styles/components/RowControls"
+@import "./styles/components/Table"
 
 input[type=checkbox]:focus
   outline-color: $slate-3
