--- a/src/styles/components/Table.sass
+++ b/src/styles/components/Table.sass
@@ -2,7 +2,7 @@
 
 .contacts-table
   border-collapse: collapse
-  display: inline-table
+  display: table
   margin: 3rem 0
   min-width: 50rem
   width: 100%
