--- a/src/styles/components/ErrorBanner.sass
+++ b/src/styles/components/ErrorBanner.sass
@@ -1,4 +1,4 @@
-@import "./base.sass"
+@import "../base/main.sass"
 
 .error-banner
   background-color: $strawberry-6
@@ -10,6 +10,10 @@
   padding: 12px
   position: absolute
   width: 100%
+
+  span
+    font-size: $scale-1
+    margin: 12px
 
   div:last-child
     margin-left: auto
