--- a/src/styles/components/RowControls.sass
+++ b/src/styles/components/RowControls.sass
@@ -1,3 +1,5 @@
+@import "../base/main.sass"
+
 .row-controls
   display: inline-flex
   flex-direction: column
@@ -23,7 +25,6 @@
       color: $slate-1
       display: inline-flex
       font-size: $scale-0
-      font-weight: bold
       height: 100%
 
     svg
@@ -52,6 +53,5 @@
         border: none
         color: $slate-1
         font-size: $scale-0
-        font-weight: bold
         padding: 12px
         text-align: left
