--- a/src/index.sass
+++ b/src/index.sass
@@ -18,13 +18,6 @@ button
   &:hover
     cursor: pointer
 
-.avatar
-  background-color: $lavender-5
-  border-radius: 100%
-  font-size: 11px
-  height: 20px
+.loading-spinner
+  margin: 12px
   text-align: center
-  width: 20px
-
-  span
-    vertical-align: middle
